--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ db.sqlite3
 media
 
 # Backup files # 
+db*.json
 *.bak 
 
 # If you are using PyCharm # 
@@ -96,7 +97,8 @@ celerybeat-schedule.*
 # SageMath parsed files 
 *.sage.py 
 
-# Environments 
+# Environments
+start.sh
 .env 
 .venv 
 env/ 
