--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 beautifulsoup4==4.12.2
+dj-database-url==1.3.0
 Django==4.1.1
 django-autoslug==1.9.8
 django-environ==0.9.0
@@ -12,3 +13,5 @@ six==1.16.0
 soupsieve==2.4
 sqlparse==0.4.3
 tornado==6.2
+typing_extensions==4.5.0
+whitenoise==6.4.0
